--- a/Example/Sun Tracker/Sun Tracker-Info.plist
+++ b/Example/Sun Tracker/Sun Tracker-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Necessary to determine the sun&apos;s position</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Used to display the sun position in a real-time view</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
